# 2026-organism-tractability

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
input/: example_organisms.csv
src/organism_tractability/: __init__.py
src/organism_tractability/db/: README.md  cli.py
src/organism_tractability/db/feature_metadata/: __init__.py  feature_metadata.yaml  feature_metadata_service.py
src/organism_tractability/db/features/: __init__.py  pipeline.py
src/organism_tractability/sources/: cli.py
src/organism_tractability/sources/atcc/: __init__.py  atcc.py  client.py
src/organism_tractability/sources/exa_answer/: __init__.py  client.py  exa_answer.py
src/organism_tractability/sources/ncbi/: __init__.py  client.py  ncbi.py
src/organism_tractability/sources/nih_reporter/: __init__.py  client.py  nih_reporter.py
src/organism_tractability/sources/protocols_io/: __init__.py  client.py  protocols_io.py
src/organism_tractability/utils/: ExaClient.py  FirecrawlClient.py  __init__.py  rate_limiter.py
